experimental/parser/testdata/parser/syntax/edition_proto2.proto.stderr.txt
error: "proto2" use the `syntax` keyword
  --> testdata/parser/syntax/edition_proto2.proto:1:1
   |
 1 | edition = "proto2";
   | ^^^^^^^
  help: replace with `syntax`
   |
 1 | - edition = "proto2";
 1 | + syntax = "proto2";
   |
   = help: "proto2" is technically an edition, but cannot use `edition`

encountered 1 error
